web/app/static/css/style.css
html, body {width: 100%;height: 100%;font-family: Roboto, sans-serif;-webkit-font-smoothing: antialiased;}
input:-webkit-autofill {-webkit-box-shadow: 0px 100px #000 inset;-webkit-text-fill-color: white;border-bottom: 3px solid #0089cc;}
input::-webkit-input-placeholder{color:#fff !important;font-size: 14px;}
.dashboard{overflow: auto!important;}
/*navBar*/
.head {position: fixed;top: 0;left: 0;width: 100%;z-index: 111;}
.afterNav{height: 75px;}
.navBar a{background-color: #fff!important;}
.navBar a:hover{background-color: rgba(0, 0, 0, .035)!important;}
.icon {position: absolute;right: 0;top: 0;}
.icon > div:first-child{background: url('../images/icon.jpg') no-repeat center !important;background-size: 40px!important;}
.icon div span {color: #D7F4F6!important;line-height: 35px;}
/*content*/
.searchForm > div +div {position: relative;top: -4px;left: 10px;}
.table {padding: 0 15px;}
.table th,.table td{vertical-align: middle!important;}
.scrollDialog {width:75%;max-height: 80%;overflow-y: auto;overflow-x:hidden; }
.scrollDialog select {margin-right: 10px;height: 30px;padding-left: 2px;border: none;border-bottom: 1px solid #E0E0E0;font-family: Roboto, sans-serif;color: #494949;}
.dropDownMenu{margin-left: -24px;}
.dropDownMenu svg + div{margin-top: -10px!important;}
.dropDownMenu svg:not(:root) {fill: #000!important;width: 20px!important;}
.graphList > div {width:44%;height:310px;margin: 10px 3%;float:left;position: relative;overflow: hidden;}
.graphList > div .delBtn{display: block;position: absolute!important;right: 10px;top: 20px;}
.graphBtn{width:35px;height:38px;background: #0089cc url('../images/add.png') no-repeat center;background-size: 25px;position: fixed;top:50%;left: -30px;cursor: pointer;}
.graphBtn:hover{left: 0px;}
.graphList > div .graphBtn{position: absolute;background: #0089cc url('../images/edit.png') no-repeat center;margin-top:-30px;}
.delBtn{display:none;}
.graphTitle{text-align: center;font-family: Roboto, sans-serif;}
.tool{width:100%;padding:0 20px!important;}
/*login*/
.login_body{background-image: url(../images/loginBg.jpg);position: relative;margin: 0;padding: 0;background-size: cover;background-repeat: no-repeat;background-position: center;display:table;overflow: hidden}
.login_form{padding: 0 20px;float:none;width:30%;margin:0 auto;height: 300px;}
#loginForm {margin-top: 40px;}
.main_login{vertical-align: middle;width: 100%;display: table-cell;max-width: initial;font-family: '微软雅黑';}
.login_info {margin-bottom: 30px;position: relative;}
.login_info .text {display: block;font-size: 14px;margin-top: 15px;border:none;width:100%;padding:0;}
.errorMessage {width:100%;font-size: 14px;color: #DF2828;text-align: center;display: block;margin-top: -15px;font-weight: 600;float: left;}
.login_btn {margin-top: 55px;}
.login_div{width:100%;height: 300px;background-color: rgba(0,0,0,0.4);padding: 20px;}
.login_input {outline: none;padding: 7px 5px 0px;margin: 5px 0;display: block;width: 100%;border: none;border-bottom: 3px solid #0089cc;background-color: transparent;color: #fff;height: 30px;font-size: 18px;font-weight: 700;}
.login_btn .buttoncss {color: white;border: 1px solid rgba(0,0,0, 1);padding: .4rem 1.5rem;cursor: pointer;background: none;background-color: rgba(255, 255, 255, 0.35);height: 40px;width: 110px;font-size: 16px;font-weight: 700;display: block;text-align: center;line-height: 40px;margin:0 auto;}
.login_btn .buttoncss:hover {background-color: rgba(255, 255, 255, 0.15);}

